--- a/index.html
+++ b/index.html
@@ -392,7 +392,7 @@ document.addEventListener('DOMContentLoaded', () => {
                 { 
                     title: "Wissenschaftliche Hilfskraft",
                     company: "Universität Augsburg",
-                    details: "Deutschland | 12/2022 - Heute",
+                    details: "Deutschland | 12/2022 - 04/2025",
                     date: "2022-12",
                     complexity: 8,
                     companyLink: "https://www.uni-augsburg.de/en/",
@@ -574,7 +574,7 @@ document.addEventListener('DOMContentLoaded', () => {
                 { 
                     title: "Research Assistant",
                     company: "University of Augsburg",
-                    details: "Germany | 12/2022 - Present",
+                    details: "Germany | 12/2022 - 04/2025",
                     date: "2022-12",
                     complexity: 8,
                     companyLink: "https://www.uni-augsburg.de/en/",
